--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# macOS system files
+.DS_Store
+.DS_Store?
+.Spotlight-V100
+.Trashes
+.Trash*
+ehthumbs.db
+Thumbs.db
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
